{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 91,
  "lineage": "4afb6d59-39af-9cb5-4691-bf8e013e860f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04d29b6f966df1537",
            "arn": "arn:aws:ec2:us-east-1:058913055553:instance/i-0fe460c79c98bd5c2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe460c79c98bd5c2",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "RCH",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0938232983417a5aa",
            "private_dns": "ip-10-16-58-122.ec2.internal",
            "private_ip": "10.16.58.122",
            "public_dns": "ec2-54-174-7-7.compute-1.amazonaws.com",
            "public_ip": "54.174.7.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ff2cad0489331a5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4225e54695cedc1",
            "tags": {
              "Name": "A4L-BASTION"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08b6bdb243f29eac1"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.sn-web-A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:internet-gateway/igw-0c0c13741c16ff6d4",
            "id": "igw-0c0c13741c16ff6d4",
            "owner_id": "058913055553",
            "tags": {
              "Name": "IGW"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00d9a121c767acdac",
            "owner_id": "058913055553",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0c13741c16ff6d4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "a4l-vpc1-rt-web"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d5deca5e3231b5a",
            "route_table_id": "rtb-00d9a121c767acdac",
            "subnet_id": "subnet-0d4225e54695cedc1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_table",
            "aws_subnet.sn-web-A",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b533f6ff424be032",
            "route_table_id": "rtb-00d9a121c767acdac",
            "subnet_id": "subnet-0274adfe20cfe79b1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_table",
            "aws_subnet.sn-web-B",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c983238d7c9f4dde",
            "route_table_id": "rtb-00d9a121c767acdac",
            "subnet_id": "subnet-0e0ec92eefe75c818"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_table",
            "aws_subnet.sn-web-C",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:security-group/sg-08b6bdb243f29eac1",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b6bdb243f29eac1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.16.0.0/16"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "058913055553",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-A4L-BASTION"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-DB-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-07c142d33692b0277",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.16.0/20",
            "id": "subnet-07c142d33692b0277",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-db-A"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-017d3f9cc5ee86198",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.32.0/20",
            "id": "subnet-017d3f9cc5ee86198",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-app-A"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0836077fab13b3d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.96.0/20",
            "id": "subnet-0836077fab13b3d7e",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-app-B"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-app-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-01f9866bacacd5e47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.160.0/20",
            "id": "subnet-01f9866bacacd5e47",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-app-C"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-db-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-050fc246236d8bfd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.80.0/20",
            "id": "subnet-050fc246236d8bfd1",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-db-B"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-db-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0046ca10afdc91746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.144.0/20",
            "id": "subnet-0046ca10afdc91746",
            "map_public_ip_on_launch": false,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-db-C"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0d4225e54695cedc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.16.48.0/20",
            "id": "subnet-0d4225e54695cedc1",
            "map_public_ip_on_launch": true,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-web-A"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0274adfe20cfe79b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.16.112.0/20",
            "id": "subnet-0274adfe20cfe79b1",
            "map_public_ip_on_launch": true,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-web-B"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-web-C",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:subnet/subnet-0e0ec92eefe75c818",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.16.176.0/20",
            "id": "subnet-0e0ec92eefe75c818",
            "map_public_ip_on_launch": true,
            "owner_id": "058913055553",
            "tags": {
              "Name": "sn-web-C"
            },
            "vpc_id": "vpc-0bafd7f56f7215453"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058913055553:vpc/vpc-0bafd7f56f7215453",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.16.0.0/16",
            "default_network_acl_id": "acl-064be2cd700c06433",
            "default_route_table_id": "rtb-0fc83257fd1eb3346",
            "default_security_group_id": "sg-068b542318afd776b",
            "dhcp_options_id": "dopt-764cf40c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bafd7f56f7215453",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0fc83257fd1eb3346",
            "owner_id": "058913055553",
            "tags": {
              "Name": "A4LVPC"
            }
          }
        }
      ]
    }
  ]
}